--- a/cart.css
+++ b/cart.css
@@ -4,8 +4,7 @@
     --color-primaryd: #fde428b2;
     --color-secundary: #e42000;
     --color-logo: #fdbc00;
-
- }
+}
 
 body {
     font-family: Arial, sans-serif;
@@ -15,6 +14,7 @@ body {
 .header {
     display: flex;
     align-items: center;
+    margin-bottom: 20px;
 }
 
 .header button {
@@ -22,40 +22,31 @@ body {
     padding: 5px 10px;
     cursor: pointer;
     background-color: red;
+    color: white;
+    border: none;
+    border-radius: 4px;
 }
 
 .header h1 {
     margin: 0;
 }
 
-
-h1 {
-    text-align: center;
-}
-
-
-#cart-items {
-    margin-top: 2px;
-}
-
-.cart-item {
-    margin-bottom: 25px;
-}
-
 .cart-item-row {
-    padding: 0px;
     display: flex;
     justify-content: space-between;
-    align-items: center;
-    margin-top: 0px;
+    padding: 5px 0;
+    border-bottom: 1px solid #ddd;
 }
 
 .cart-item-title {
+    font-size: 16px;
     flex-grow: 1; /* Toma el espacio restante */
     font-weight: bold;
 }
 
 .cart-item-price {
+    font-size: 16px;
+    font-weight: bold;
     margin-left: 10px;
 }
 
@@ -69,15 +60,18 @@ h1 {
     font-size: 1.2em; /* Tamaño del ícono */
 }
 
-
 .remove-item:hover {
     background-color: darkred;
 }
 
-#cart-total {
+#cart-total, #shipping-cost {
     font-size: 1.2em;
-    margin-top: 20px;
+    margin-top: 10px;
     text-align: right;
+}
+
+#address-section {
+    display: none; /* Ocultar por defecto */
 }
 
 button {
@@ -86,6 +80,14 @@ button {
     padding: 10px 20px;
     font-size: 1em;
     cursor: pointer;
+    background-color: #4CAF50; /* Verde */
+    color: white;
+    border: none;
+    border-radius: 4px;
+}
+
+button:hover {
+    background-color: #45a049;
 }
 
 .customer-details {
@@ -93,7 +95,8 @@ button {
 }
 
 .customer-details label,
-.customer-details input {
+.customer-details input,
+.customer-details select {
     display: block;
     width: 100%;
     margin: 5px 0;
@@ -105,22 +108,8 @@ button {
     font-weight: bold;
 }
 
-.customer-details input {
+.customer-details input,
+.customer-details select {
     border: 1px solid #ccc;
     border-radius: 4px;
 }
-
-button {
-    margin-top: 20px;
-    padding: 10px 20px;
-    background-color: #4CAF50; /* Verde */
-    color: white;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-}
-
-button:hover {
-    background-color: #45a049;
-}
-
