--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,23 @@ header {
     display: flex;
     align-items: center;
 }
+/* Estilos para el botón de eventos */
+.event-button {
+    padding: 10px 20px;
+    background-color: #007BFF;
+    color: white;
+    font-size: 16px;
+    font-weight: bold;
+    text-align: center;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    text-decoration: none;
+}
+
+.event-button:hover {
+    background-color: #0056b3;
+}
 
 .logo {
     width: 100px; /* Ajusta el tamaño de la imagen */
